--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     margin: 0 auto;
     margin-top: 45px;
-    
+    border-bottom: 1px solid rgb(84, 84, 84, 0.7);
     
     
 }
@@ -12,14 +12,11 @@
 @media screen and (max-width: 1110px) {
     .header {
         max-width: 100%;
-        
     }
 }
 
-
 @media screen and (max-width: 320px) {
     .header {
-        
         margin-top: 28px;
     }
 }
