--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,9 +1,25 @@
 .popup__container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
     
+    margin: 0 auto;
+    max-width: 430px;
+    max-height: 330px;
+    position: relative;
+    background-color: #FFFFFF;
+    text-align: center;
     
+    padding: 34px 36px 37px 36px;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+
+    
+}
+
+
+
+@media screen and (max-width: 525px) {
+    .popup__container {
+        
+        max-width: 282px;
+        padding: 25px 22px 25px 22px;
+    }
 }
