--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup__job {
+.popup__input {
     font-style: normal;
     color: #000000;
     font-weight: 400;
@@ -8,16 +8,23 @@
     min-width: 358px;
     border: 0;
     border-bottom: 1px solid rgb(0, 0, 0, 0.2);
-    padding-bottom: 13px;
-    margin-bottom: 48px;
+    margin-bottom: 30px;
+    padding-bottom: 10px;
+    
 }
-.popup__job:focus {
+.popup__input:focus {
     outline: none;
 }
 
+.popup__input:nth-child(2) {
+    margin-bottom: 48px;
+}
+
 @media screen and (max-width: 525px) {
-    .popup__job {
-        margin-bottom: 45px;
+    .popup__input {
         min-width: 238px;
+    }
+    .popup__input:nth-child(2) {
+        margin-bottom: 45px;
     }
 }
