--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -1,14 +1,13 @@
 .profile__avatar {
     border-radius: 50%;
     max-width: 120px;
-    height: 120px;
+    min-height: 120px;
     margin-right: 30px;
 }
 
 @media screen and (max-width: 1110px) {
     .profile__avatar {
         margin-right: 0;
-        
-        
+        align-self: center;
     }
 }
