--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,14 +1,10 @@
 .profile__info {
-    
     display: flex;
-    
-    row-gap: 16px;
-    column-gap: 18px;
+    margin-top: 22px;
     flex-wrap: wrap;
     align-content: flex-start;
     margin-right: 244px;
     max-width: 336px;
-    /*margin-right: 244px;*/
     flex-shrink: 0;
 }
 
