--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,7 +1,7 @@
 .profile__name {
     display: flex;
     gap: 18px;
-    
+    margin-bottom: 8px;
 }
 
 @media screen and (max-width: 1110px) {
@@ -9,5 +9,6 @@
         flex-direction: row;
         margin-left: calc(19px + 10px);
         gap: 10px;
+        margin-bottom: 0;
     }
 }
