--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -6,15 +6,14 @@
     font-size: 18px;
     line-height: 22px;
     max-width: 336px;
-    
-    
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 1110px) {
     .profile__subtitle {
         font-size: 14px;
         line-height: 17px;
-        
-        
     }
 }
