--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -5,20 +5,16 @@
     font-weight: 500;
     font-size: 42px;
     line-height: 1.14;
-    margin-top: 22px;
-    /*margin-right: 2px;*/
-    
-    
-    
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 1110px) {
     .profile__title {
-        
         font-size: 27px;
         line-height: 33px;
         text-align: center;
-        margin-top: 0;
         max-width: 189px;
     }
 }
