--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -8,7 +8,7 @@
     .header__logo {
         margin-left: 27px;
         max-width: 103.74px;
-        margin-bottom: 31.6px;
+        padding-bottom: 31.6px;
     }
 }
 
