--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,19 +1,19 @@
 .popup {
     display: none;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     position: fixed;
     left: 0;
     top: 0;
     background-color: rgb(0, 0, 0, .5);
     z-index: 2;
-    
-    display: flex;
     justify-content: center;
     align-items: center;
     
 }
 
-.popup.active {
-    display: block;
+.popup_opened {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
