--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,6 +1,7 @@
 .profile__title {
     color: #FFFFFF;
     margin: 0;
+    max-width: 294px;
     font-style: normal;
     font-weight: 500;
     font-size: 42px;
