3 отправка на ревью

--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -13,7 +13,7 @@
     text-align: center;
     background-color: #000000;
     color: #FFFFFF;
-    
+    padding: 0;
     
 }
 .popup__button:hover {
