--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,19 +1,18 @@
 .popup__close {
     background-image: url(../../../images/close.svg);
-
     cursor: pointer;
     width: 32px;
     height: 32px;
     background-repeat: no-repeat;
-    
+    background-position: center;
+    background-size: contain;
     position: absolute;
-    
     color: #FFFFFF;
     top: -40px;
     right: -40px;
     background-color: transparent;
     border: 0;
-    
+    padding: 0;
     
 }
 .popup__close:hover {
