--- a/pages/index.css
+++ b/pages/index.css
@@ -25,5 +25,6 @@
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
 
 
