--- a/blocks/element/__button/element__button.css
+++ b/blocks/element/__button/element__button.css
@@ -4,17 +4,20 @@
     height: 19px;
     border: none;
     align-self: center;
-    margin-right: 20px;
     background-color: #FFFFFF;
+    margin-right: 20px;
+    
     cursor: pointer;
     flex-shrink: 0;
     padding: 0;
 }
 
-.element__button:active {
-    background-image: url(../../../images/black-like.svg);
-}
 
-.element__button:not(.element__buton:active):hover {
+
+/*.element__button:active {
+    background-image: url(../../../images/black-like.svg);
+}*/
+
+.element__button:hover {
     opacity: 0.5;
 }
