--- a/blocks/popup-img/poup-img.css
+++ b/blocks/popup-img/poup-img.css
@@ -1,4 +1,4 @@
-.popup {
+.popup-img {
     transition: visibility 0s, opacity 0.5s linear;
     visibility: hidden;
     opacity: 0;
@@ -7,10 +7,8 @@
     position: fixed;
     left: 0;
     top: 0;
-    
+    background-color: rgb(0, 0, 0, .9);
     z-index: 2;
     justify-content: center;
     align-items: center;
-    
 }
-
