--- a/blocks/popup-two/_opened/popup-two_opened.css
+++ b/blocks/popup-two/_opened/popup-two_opened.css
@@ -1,8 +1,6 @@
-.popup_opened {
+.popup-two_opened {
     visibility: visible;
     opacity: 1;
     display: flex;
     background-color: rgb(0, 0, 0, .5);
-    
-    
 }
