--- a/blocks/popup-two/popup-two.css
+++ b/blocks/popup-two/popup-two.css
@@ -1,4 +1,4 @@
-.popup {
+.popup-two {
     transition: visibility 0s, opacity 0.5s linear;
     visibility: hidden;
     opacity: 0;
@@ -7,10 +7,9 @@
     position: fixed;
     left: 0;
     top: 0;
-    
+    background-color: rgb(0, 0, 0, .5);
     z-index: 2;
     justify-content: center;
     align-items: center;
     
 }
-
