--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,5 @@
 .popup__input {
+    
     font-style: normal;
     color: #000000;
     font-weight: 400;
@@ -11,19 +12,24 @@
     margin-bottom: 30px;
     padding-bottom: 10px;
 }
+
 .popup__input:focus {
     outline: none;
 }
 
-.popup__input:nth-child(2) {
-    margin-bottom: 48px;
-}
+
+
+/*.popup__input:invalid {
+    padding-bottom: 13px;
+    margin-bottom: 8px;
+    border-bottom: 1px solid red;
+}*/
 
 @media screen and (max-width: 525px) {
     .popup__input {
         min-width: 238px;
     }
-    .popup__input:nth-child(2) {
+    /*.popup__input:nth-child(2) {
         margin-bottom: 45px;
-    }
+    }*/
 }
