--- a/pages/index.css
+++ b/pages/index.css
@@ -33,6 +33,11 @@
 @import url(../blocks/popup/_type/popup_type_image.css);
 @import url(../blocks/popup/_type/popup_type_new-element.css);
 @import url(../blocks/popup/__element/popup__element.css);
+@import url(../blocks/popup/__input/_error/popup__input_error.css);
+@import url(../blocks/popup/__text-error/popup__text-error.css);
+@import url(../blocks/popup/__text-error/_active/popup__text-error_active.css);
+@import url(../blocks/popup/__button/_disabled/popup__button_disabled.css);
+@import url(../blocks/popup/__input/_disabled/popup__input_disabled.css);
 
 
 
