--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,7 @@
 .popup__container {
     margin: 0 auto;
     max-width: 430px;
+    max-height: 330px;
     position: relative;
     background-color: #FFFFFF;
     text-align: center;
