--- a/blocks/popup/__text-error/_active/popup__text-error_active.css
+++ b/blocks/popup/__text-error/_active/popup__text-error_active.css
@@ -2,6 +2,7 @@
     visibility: visible;
     opacity: 1;
     display: block;
-    margin-bottom: 13px;
+    transform: translateY(calc(100% - 27px));
+    
 }
 
