--- a/blocks/popup/__text-error/popup__text-error.css
+++ b/blocks/popup/__text-error/popup__text-error.css
@@ -2,14 +2,16 @@
     visibility: hidden;
     opacity: 0;
     margin: 0;
-    margin-bottom: 13px;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
     color: #FF0000;
     text-align: start;
-    max-width: 358px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
     
 }
 
