--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
 .popup{align-items:center;display:flex;height:100vh;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:all .5s;visibility:hidden;width:100%;z-index:2}
 .profile{display:grid;grid-template-columns:repeat(3,1fr);margin:40px auto 0;max-width:calc(100% - 400px)}@media screen and (max-width:1084px){.profile{grid-template-columns:0;justify-content:center;justify-items:center;margin-top:42px;max-width:calc(100% - 38px)}}
 .element__button{align-self:center;background-color:#fff;background-image:url(87ed371465c7a6a1cd01.svg);border:none;cursor:pointer;flex-shrink:0;height:19px;margin-right:20px;padding:0;width:22px}.element__button:hover{opacity:.5}
-.element__group{display:flex;justify-content:space-between;line-height:79px;padding-bottom:26px;padding-top:25px}
+.element__group{display:flex;justify-content:space-between;line-height:79px;padding-bottom:21px;padding-top:22px}
 .element__image{border-radius:10px 10px 0 0;cursor:pointer;height:282px;-o-object-fit:cover;object-fit:cover;width:282px}
 .element__text{align-self:center;font-size:24px;font-style:normal;font-weight:900;line-height:29px;margin:0 0 0 21px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .footer__text{color:#545454;font-size:18px;font-style:normal;font-weight:400;line-height:22px;margin:0}@media screen and (max-width:320px){.footer__text{font-size:14px;line-height:17px}}
@@ -21,7 +21,7 @@
 .popup__image{max-height:75vh;max-width:75vw}
 .popup__text{color:#fff;font-size:12px;font-style:normal;font-weight:400;line-height:15px;margin:10px 0 0}
 .profile__add-button{align-self:center;background-color:transparent;background-image:url(d86bb2edc2f6eadb96b7.svg);background-position:50%;background-repeat:no-repeat;border:2px solid #fff;border-radius:2px;cursor:pointer;flex-shrink:0;height:50px;justify-self:flex-end;margin-left:244px;padding:0;width:150px}.profile__add-button:hover{opacity:.6}@media screen and (max-width:1110px){.profile__add-button{background-size:16px;justify-self:center;margin-left:0;width:282px}}
-.profile__avatar{border-radius:50%;margin-right:30px;max-width:120px;min-height:120px}@media screen and (max-width:1110px){.profile__avatar{align-self:center;justify-self:center;margin-right:0}}
+.profile__avatar{border-radius:50%;margin-right:30px;max-width:120px;min-height:120px}.profile__avatar-container:hover .profile__avatar{opacity:.2}@media screen and (max-width:1110px){.profile__avatar{align-self:center;justify-self:center;margin-right:0}}
 .profile__edit-button{background-color:transparent;background-image:url(8667ac4a523e8fc42e59.svg);background-position:50%;background-repeat:no-repeat;border:1px solid #fff;box-sizing:border-box;cursor:pointer;height:24px;margin-top:15px;padding:0;width:24px}.profile__edit-button:hover{opacity:.6}@media screen and (max-width:1110px){.profile__edit-button{height:18px;margin-top:8px;max-width:18px}}
 .profile__info{align-content:flex-start;display:flex;flex-direction:column;flex-shrink:0;flex-wrap:wrap;margin-top:22px;max-width:336px;min-width:336px}@media screen and (max-width:1110px){.profile__info{align-self:center;-moz-column-gap:10px;column-gap:10px;justify-content:center;justify-self:center;margin:26px 0 34px;min-width:282px;row-gap:8px}}
 .profile__subtitle{color:#fff;font-size:18px;font-style:normal;font-weight:400;line-height:22px;margin:0;max-width:336px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:1110px){.profile__subtitle{align-self:center;font-size:14px;line-height:17px;margin-left:15px;max-width:282px}}
@@ -38,5 +38,8 @@
 .popup__button_disabled{background-color:transparent;border:1px solid #000;color:#000;cursor:not-allowed}
 .popup__label{align-self:center;display:flex;flex-direction:column;position:relative}
 .popup__input_disabled{border-bottom:1px solid red}
-.element__count{color:#000;font-size:13px;font-weight:400;line-height:15.73px;margin:3px 0 0;text-align:center}
+.element__count{color:#000;font-size:13px;font-weight:400;line-height:15.73px;margin:6px 20px 0 0;text-align:center}
+.element__likes{align-items:center;display:flex;flex-direction:column}
+.profile__avatar-container{position:relative}
+.profile__avatar-button{background-color:transparent;background-image:url(a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;border:none;cursor:pointer;height:26px;left:47px;margin:0;opacity:0;padding:0;position:absolute;top:47px;width:26px}.profile__avatar-container:hover .profile__avatar-button{opacity:1}
 
