--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -41,8 +41,10 @@
 @import url(../blocks/popup/__label/popup__label.css);
 @import url(../blocks/popup/__input/_disabled/popup__input_disabled.css);
 
-
-
+@import url(../blocks/element/__count/element__count.css);
+@import url(../blocks/element/__likes/element__likes.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
+@import url(../blocks/profile/__avatar-button/profile__avatar-button.css);
 
 
 
